--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -8,3 +8,5 @@ services:
     environment:
       - KEYCLOAK_ADMIN=admin
       - KEYCLOAK_ADMIN_PASSWORD=admin
+    volumes:
+      - ./themes/demo:/opt/keycloak/themes/demo
