--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -1,13 +1,48 @@
 services:
-  keycloak:
-    container_name: keycloak
-    image: quay.io/keycloak/keycloak
-    command: start-dev
-    ports:
-      - 8080:8080
+  mariadb:
+    image: docker.io/mariadb:10
     environment:
-      - KEYCLOAK_ADMIN=admin
-      - KEYCLOAK_ADMIN_PASSWORD=admin
+      MARIADB_DATABASE: testdb
+      MARIADB_ROOT_PASSWORD: root
+      MARIADB_PASSWORD: admin
+      MARIADB_USER: admin
+    volumes:
+      - my-datavolume:/var/lib/mysql
+    networks:
+      - local_network
+  keycloak:
+    image: quay.io/keycloak/keycloak
+    environment:
+      KC_HOSTNAME: localhost
+      KC_HOSTNAME_PORT: 7080
+      KC_HOSTNAME_STRICT_BACKCHANNEL: "true"
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+      KC_HEALTH_ENABLED: "true"
+      KC_LOG_LEVEL: info
+      KC_DB: mariadb
+      KC_DB_URL: jdbc:mariadb://mariadb:3306/testdb?characterEncoding=UTF-8
+      KC_DB_USERNAME: admin
+      KC_DB_PASSWORD: admin
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:7080/health/ready"]
+      interval: 15s
+      timeout: 2s
+      retries: 15
+    command: ["start-dev", "--http-port", "7080", "--https-port", "7443"]
+    ports:
+      - "7080:7080"
+      - "7443:7443"
     volumes:
       - ./themes/test:/opt/keycloak/themes/test
-      
+    depends_on:
+      - mariadb
+    networks:
+      - local_network
+
+volumes:
+  my-datavolume:
+
+networks:
+  local_network:
+    driver: bridge
